## Process this file with automake to produce Makefile.in

properties_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/properties

properties_data_DATA = \
	ada.properties \
	anjuta.properties \
	cs.properties \
	make.properties \
	rc.properties \
	html.properties \
	ruby.properties \
	baan.properties \
	idl.properties \
	pascal.properties \
	sample.properties \
	bash.properties \
	java.properties \
	perl.properties \
	sql.properties \
	conf.properties \
	latex.properties \
	props.properties \
	vb.properties \
	cpp.properties \
	lua.properties \
	python.properties \
	xml.properties \
	others.properties
