## Process this file with automake to produce Makefile.in

properties_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/properties

properties_data_DATA = \
	ada.properties \
	anjuta.properties \
	asm.properties \
	ave.properties \
	baan.properties \
	bash.properties \
	bullant.properties \
	conf.properties \
	cpp.properties \
	cs.properties \
	eiffel.properties \
	fortran.properties \
	html.properties \
	idl.properties \
	java.properties \
	latex.properties \
	lisp.properties \
	lua.properties \
	make.properties \
	matlab.properties \
	others.properties \
	pascal.properties \
	perl.properties \
	php.properties \
	props.properties \
	python.properties \
	rc.properties \
	ruby.properties \
	sample.properties \
	sql.properties \
	tcltk.properties \
	user.properties \
	vb.properties \
	xml.properties

EXTRA_DIST = $(properties_data_DATA)
