noinst_PROGRAMS = anjuta-tabber-test

# Include paths
AM_CPPFLAGS = \
        $(WARN_CFLAGS) \
        $(DEPRECATED_FLAGS) \
        $(GDA_CFLAGS) \
        $(LIBANJUTA_CFLAGS)

anjuta_tabber_test_CFLAGS = $(LIBANJUTA_CFLAGS)
anjuta_tabber_test_LDADD = $(LIBANJUTA_LIBS) $(ANJUTA_LIBS)

anjuta_tabber_test_SOURCES = anjuta-tabber-test.c
