INCLUDES = \
  $(ANJUTA_CFLAGS) \
  -DEGG_COMPILATION \
  -DG_DISABLE_DEPRECATED \
  -DGDK_DISABLE_DEPRECATED \
  -DGTK_DISABLE_DEPRECATED \
  -I$(top_builddir)/libegg/util

noinst_LIBRARIES = libegg-treeview.a

# libegg_treeview_a_LIBADD = $(ANJUTA_LIBS)
libegg_treeview_a_SOURCES = \
  eggaccelerators.c	\
  eggcellrendererkeys.c \
  eggcellrendererpopup.c \
  egg-cell-renderer-text.c \
  eggtreemodelfilter.c \
  eggtreemodelunion.c \
  eggtreemultidnd.c \
  eggtreeviewstate.c

noinst_HEADERS = \
  eggaccelerators.h	\
  eggcellrendererkeys.h \
  eggcellrendererpopup.h \
  egg-cell-renderer-text.h \
  eggtreemodelfilter.h \
  eggtreemultidnd.h \
  eggtreeviewstate.h


noinst_PROGRAMS = test-tree-utils test-multi-drag test-union

test_tree_utils_SOURCES = test-tree-utils.c
test_tree_utils_LDADD = libegg-treeview.a $(ANJUTA_LIBS)
test_tree_utils_DEPENDENCIES = libegg-treeview.a

test_multi_drag_SOURCES = test-multi-drag.c
test_multi_drag_LDADD = libegg-treeview.a $(ANJUTA_LIBS)
test_multi_drag_DEPENDENCIES = libegg-treeview.a

test_union_SOURCES = test-union.c
test_union_LDADD = libegg-treeview.a $(ANJUTA_LIBS)
test_union_DEPENDENCIES = libegg-treeview.a
